deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: casual-sst
  labels:
    name: casual-sst
